fix: fix home page path

--- a/package.json
+++ b/package.json
@@ -16,5 +16,5 @@
   "bugs": {
     "url": "https://github.com/kyle65463/js-tetris/issues"
   },
-  "homepage": "https://github.com/kyle65463/js-tetris#readme"
+  "homepage": "https://myusername.github.io/js-tetris"
 }
